--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "markdown-it-emoji": "^1.4.0",
     "svgo": "^1.2.1",
     "typography": "^0.16.19",
+    "typography-theme-funston": "^0.16.19",
     "typography-theme-lincoln": "^0.16.19"
   },
   "dependencies": {}
