Add files from theory book and update .eleventh.js

--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "typography-theme-funston": "^0.16.19",
     "typography-theme-lincoln": "^0.16.19"
   },
-  "dependencies": {}
+  "dependencies": {
+    "clean-css": "^4.2.1",
+    "uglify-es": "^3.3.9"
+  }
 }
